@@ -4441,6 +4441,10 @@ sub handle_factored_dependencies
 	       "use `install-data-local' or `install-exec-local', "
 	       . "not `install-local'");
 
+  reject_rule ('install-hook',
+	       "use `install-data-hook' or `install-exec-hook', "
+	       . "not `install-hook'");
+
   # Install the -local hooks.
   foreach (keys %dependencies)
     {
