@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2005  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -66,3 +66,14 @@ VERSION=2.0 $MAKE -e install
 grep 1 bin/foo-1.0
 grep 2 bin/foo-2.0
 grep 2 bin/foo
+
+
+# install-hook is an error.
+cat >>Makefile.am <<EOF
+install-hook:
+	echo test
+EOF
+
+AUTOMAKE_fails
+grep install-data-hook stderr
+grep install-exec-hook stderr
