@@ -1,5 +1,10 @@
 2005-02-27  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	Fix for PR automake/448:
+	* automake.in (handle_factored_dependencies): Flag install-hook as
+	an error.
+	* tests/insthook.test: Exercise this.
+
 	* m4/lispdir.m4: Use datarootdir instead of datadir to match GCS.
 	* doc/automake.texi (Hard-Coded Install Paths): Adjust.
 
